...
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:titleTextColor="@color/color_white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_meter_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/fragment_meter_save"
        app:layout_constraintTop_toBottomOf="@id/fragment_meter_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/indent_l">
...
                    app:layout_constraintStart_toEndOf="@id/fragment_meter_first_reading_guide"
                    app:layout_constraintTop_toBottomOf="@id/fragment_meter_current_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_meter_meters_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/fragment_meter_reading_layout" />

            <androidx.appcompat.widget.AppCompatTextView
...
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_photo_validation_message" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_meter_image_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_m"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_meter_image_loading" />
...
