...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/indent_m">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_photo_type_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.mobnius.cic.ui.component.CicEditText
        android:id="@+id/dialog_photo_type_notice"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_m"
        app:cicEditTextLabel="@string/notice"
        app:layout_constraintTop_toBottomOf="@id/dialog_photo_type_list" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_photo_type_take_picture"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_m"
        android:padding="@dimen/indent_m"
        android:text="@string/take_photo"
...
