<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/scene_profile">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/fragment_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_profile"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:titleTextColor="@color/color_white" />


    <ru.mobnius.cic.ui.component.CircleImageView
        android:id="@+id/fragment_profile_user_photo"
        android:layout_width="@dimen/default_expanded_image_size"
        android:layout_height="@dimen/default_expanded_image_size"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/indent_m"
        android:layout_marginEnd="@dimen/indent_m"
        android:src="@drawable/ic_person_24"
        app:civ_border_color="@color/color_white"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="@color/color_white"
        app:layout_collapseParallaxMultiplier="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_profile_user_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/color_white" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/fragment_profile_user_rating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_m"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/quality"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_cash_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/cash_bonus"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_quality" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_m"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/surname"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_cash_bonus" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/name"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_surname" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/middle_name"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_name" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_m"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/address"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_middle_name" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/e_mail"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_address" />

            <ru.mobnius.cic.ui.component.TextFieldView
                android:id="@+id/fragment_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:elevation="@dimen/one_dp"
                android:padding="@dimen/indent_xl"
                app:labelText="@string/phone_number"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_email" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_profile_phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>